@@ -3,6 +3,7 @@ Broker:
 - Fix listener not being reassociated with client when reloading a persistence
   file and `per_listener_settings true` is set and the client did not set a
   username. Closes #1891.
+- Fix file logging on Windows. Closes #1880.
 
 
 1.6.12 - 2020-08-19
